--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
@@ -3,7 +3,7 @@
 \label{subsec:motorwirkungsgrad}
 
 \textbf{Einführung\newline}
-Es wurden Überlegungen in die Richtung des Motorwirkungsgrades angestellt, um basierend auf den eingeholten Informationen einen Schaltvorschlag errechnen zu können. Ein Schaltvorschlag ist ein Hinweis für einen Nutzer, worauf und wann dieser Schalten könnte. Ein derartiger Vorschlag bietet Optionen bezüglich der Visualisierung und des angestrebten Effekts (siehe 3.3 Schaltvorschlag). Für das weitere Verständnis sind allerdings einige Grundlagen von besonderer Relevanz:
+Die Beschaffung von Informationen zum Motorwirkungsgrades wurde durchgeführt, um basierend auf den eingeholten Informationen einen Schaltvorschlag errechnen zu können. Ein Schaltvorschlag ist ein Hinweis für einen Nutzer, worauf und wann dieser Schalten könnte. Ein derartiger Vorschlag bietet Optionen bezüglich der Visualisierung und des angestrebten Effekts (siehe \ref{subsec:schaltvorschlag} Schaltvorschlag). Für das weitere Verständnis sind allerdings einige Grundlagen von besonderer Relevanz:
 Ein Teil des Projektes möchte dem Fahrer Informationen zu einem möglichst idealen Schaltzeitpunkt zur Verfügung stellen. Dabei spielt der Wirkungsgrad hinsichtlich des Spritverbrauchs eine entscheidende Rolle. Ein niedriger Spritverbrauch (Wirkungsgrad) bedeutet deshalb nicht, dass der \ce{CO2}-Ausstoß niedrig ist. Der Katalysator hat einen eigenen Wirkungsgrad, welcher für diese Rechnung einbezogen werden muss. Für das Diplomprojekt beschlossen wir den Motorwirkungsgrad in den Fokus zu setzen.
 
 \begin{wrapfigure}{r}{0.6\textwidth}\centering
@@ -14,8 +14,8 @@ Eine effiziente Fahrweise ist besonders in Bezug auf die immer restriktiveren Em
 Denn die Öl-Förderung erzeugt schon heute Naturkatastrophen und Umweltverschmutzung und wird immer schwerer zu erlangen.
 Naturkatastrophen wie BP's \textit{Deepwater Horizon} Ölpest aus dem Jahre 2010 \cite{SIMR.CH2-motorwirkungsgrad.BPSpillGeneral}, bei welcher 3 Jahre nach der Explosion weiterhin Rekordzahlen von Delphinen und Wasserschildkröten starben \cite{SIMR.CH2-motorwirkungsgrad.BPSpillDeaths}. 
 
-\textbf{Zielsetzung\newline}
-Geplant wurde ein möglichst kraftstoffeffizienter Schaltvorschlag.
+\textbf{Relevante Faktoren für die Konzeptionierung des Schaltvorschlags\newline}
+Gewünscht war ein möglichst kraftstoffeffizienter Schaltvorschlag.
 Die Formel \textit{Kraftstoffmenge = Strecke * Verbrauch} gibt einem Autofahrer 2 Optionen, seinen Kraftstoffverbrauch zu minimieren. Option 1 wäre weniger zu fahren, Option 2 verbrauchsärmer zu fahren. Hier steht die 2. Option im Fokus. 
 Zur weiteren Erläuterung, wie der Schaltvorgang in diesem Projekt umgesetzt wurde, soll hier ein kurzer Überblick über die Funktion eines 4-Takt Verbrennungsmotors gegeben werden. Ein Takt ist ein Kolbenhub, also eine Auf- oder Abwärtsbewegung des Kolbens. Der Kreisprozess (siehe Carnot-Prozess) von 4 Takten dreht sich die Kurbenwelle folglich zweimal.
 
@@ -56,12 +56,11 @@ Alle diese Faktoren sind sehr stark vom eigenen Fahrstil abhängig, welcher dadu
 
 Zielsetzung ist es, dem Fahrer einen optimalen Schaltvorschlag zu machen und das Fahrzeug in möglichst hohem Motorwirkungsgrad zu halten. Das heißt, aus jedem Tropfen eingespritztem Kraftstoff möglichst viel Energie zu gewinnen. Deshalb wird bei diesem Ansatz auch bewusst dazu aufgefordert den Motor weitaus höher als bei einem konventionellen Schaltvorschlag zu drehen bzw. mit höherer Motorlast zu fahren.
  
-Bordcomputer unterscheiden sich voneinander oft stark. Viele Autos bieten zum Zweck der Verbrauchsmessung nur eine Anzeige des Momentanverbrauchs, welcher wenig hilfreich ist. Anhand dieser Berechnungen kann man keine Schlüsse auf die Fahrweise ziehen. Einige glätten den Verbrauch auf einen Zeitraum, doch alle gemeinsam haben sie, dass die nicht ausreichend dokumentiert sind um faktische Rückschlüsse auf den Fahrstil treffen zu können.
+Bordcomputer, welche die Verarbeitung durchführen, unterscheiden sich voneinander oft stark. Viele Autos bieten zum Zweck der Verbrauchsmessung nur eine Anzeige des Momentanverbrauchs, welcher wenig hilfreich ist. Anhand dieser Berechnungen kann man keine Schlüsse auf die Fahrweise ziehen. Einige glätten den Verbrauch auf einen Zeitraum, doch alle gemeinsam haben sie, dass die nicht ausreichend dokumentiert sind um faktische Rückschlüsse auf den Fahrstil treffen zu können.
 
 \textbf{Bonanza-Effekt oder Torsionsschwingungen im Antriebsstrang\nextline}
-Direktes Zitat: \cite{SIMR.CH2-motorwirkungsgrad.Motorschwingungen}
-\textit{
-\glqq Der Verkehr stockt und zwingt den Autofahrer zum Bremsen, er schaltet jedoch nicht in einen niedrigeren Gang. In solchen Fällen ist oftmals ein Brummen zu hören: Die Torsionsschwingung verursacht das unangenehme Geräusch. Sie tritt auf, da sich die Kurbelwelle bei Verbrennungsmotoren nie ganz gleichförmig dreht. Diese Drehschwingung belastet das Getriebe, im schlimmsten Fall leidet die Lebensdauer des Motors – er geht früher kaputt. Auch in anderen Antriebssträngen, die mit einem Verbrennungsmotor gekoppelt sind, kommt es zu dem unerwünschten Effekt – etwa in Schiffen oder Produktionsmaschinen. Grundsätzlich gibt es zwar Lösungen, um ihn ausgleichen. Da die Motoren jedoch immer effizienter werden, nehmen auch die Schwingungen zu – die bestehenden Ausgleichssysteme kommen an ihre Grenzen. Ein Beispiel: Beim PKW geht der Trend zu weniger Zylindern oder aber dazu, einzelne Zylinder zeitweise abzuschalten. Dies hat zur Folge, dass der Motor weniger rund läuft und vermehrt Torsionsschwingungen auftreten. Bei Schiffen entstehen sie, wenn im Hafen von Schweröl oder Dieselantrieb auf Gas umgeschaltet wird, um die Emissionen zu reduzieren.\grqq} 
+\cite{SIMR.CH2-motorwirkungsgrad.Motorschwingungen}
+Wenn der Verkehr stockt und der Autofahrer gezwungen wird zu bremsen, dieser jedoch nicht in einen niedrigeren Gang schaltet, dann ist oftmals einen Brummen vernehmbar: Die sogenannte Torsionsschwingung verursacht das unangenehme Geräusch. Diese tritt auf, da sich die Kurbelwelle bei Verbrennungsmotoren nie vollkommen gleichförmig dreht. Diese Drehschwingung belastet das Getriebe. Im schlimmsten Fall leidet die Lebensdauer des Motors, wodurch er früher kaputt gehen kann. Es gibt Grundsätzlich gibt es zwar Lösungen, um sie ausgleichen. Durch immer effizienter werdende Motoren, nehmen auch die Schwingungen zu. Dadurch stoßen die bestehenden Ausgleichssysteme an ihre Grenzen. Beispielsweise werden beim PKW immer häufiger einzelne Zylinder zeitweise abgeschalten. Durch diese Praktik, läuft der Motor weniger rund und es treten vermehrt Torsionsschwingungen auf. 
 
 Demnach ist es also wichtig die Torsionsschwingungen zu vermeiden. Diese Schwingungen treten am Stärksten in hohem Gang bei niedriger Drehzahl aber hoher Last auf. Diese Schwingungen sind konkret auf dem bei Abb. \ref{Fig:imgEngineVibrations} gezeigtem Motorkennfeld im oberen drittel des Drehmoments im Bereich von <1000rpm angesiedelt. Dieser Bereich ist nicht eingezeichnet, da in diesem Bereich massive Schwankungen des Motormoments auftreten. Dieser Bereich umfasst Motormomente, die das 3-fache der sonst üblichen Torsionsschwingungen übersteigen. Überdies produziert der Motor innerhalb dieses Bereiches kaum Leistung.
 
