--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -726,3 +726,27 @@ note = {Accessed on 30.03.2016}
     howpublished = "\url{http://www.faz.net/aktuell/technik-motor/auto-verkehr/neuer-diesel-motor-selbstzuendender-meister-des-wirkungsgrads-1232042.html}",
     note = {Accessed on 07.04.2016}
 }
+
+@misc{SIMR.CH1-fahrstil-analyse.VWSkandal, 
+    author = {Auto Bild},
+    year = {2016},
+    title = {Dicke Luft und grünes Licht},
+    howpublished = "\url{http://www.autobild.de/artikel/vw-abgasskandal-news-und-hintergruende---update-6077591.html}",
+    note = {Accessed on 08.04.2016}
+}
+
+@misc{SIMR.CH3-obd2.VWSkandal, 
+    author = {unknown},
+    year = {2015},
+    title = {Fehlerspeicher},
+    howpublished = "\url{http://mein-opel-corsa.npage.de/fehlerspeicher.html}",
+    note = {Accessed on 08.04.2016}
+}
+
+@misc{SIMR.CH3-obd2.CANBus, 
+    author = {ME-Meßsysteme GmbH},
+    year = {unknown},
+    title = {CAN Bus Grundlagen},
+    howpublished = "\url{http://www.me-systeme.de/canbus.html#1578569eb20a41712}",
+    note = {Accessed on 08.04.2016}
+}
