--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -735,7 +735,7 @@ note = {Accessed on 30.03.2016}
     note = {Accessed on 08.04.2016}
 }
 
-@misc{SIMR.CH3-obd2.VWSkandal, 
+@misc{SIMR.CH3-obd2.OBDSicherungskasten, 
     author = {unknown},
     year = {2015},
     title = {Fehlerspeicher},
