last check i guess

--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -734,3 +734,35 @@ note = {Accessed on 30.03.2016}
     howpublished = "\url{http://mechlab-engineering.de/references/low-budget-car-pc/}",
     note = {Accessed on 08.04.2016}
 }
+
+@misc{PERT.CH3-singleboardpc-tinkerforge, 
+    author = {Tinkerforge},
+    year = {2016},
+    title = {Tinkerforge},
+    howpublished = "\url{https://www.tinkerforge.com/de/shop/bricks/red-brick.html}",
+    note = {Accessed on 08.04.2016}
+}
+
+@misc{PERT.CH3-singleboardpc-tinkerforge, 
+    author = {Tinkerforge},
+    year = {2016},
+    title = {Tinkerforge},
+    howpublished = "\url{https://www.tinkerforge.com/de/shop/bricks/red-brick.html}",
+    note = {Accessed on 08.04.2016}
+}
+
+@misc{PERT.CH3-singleboardpc-raspberry, 
+    author = {Unbekannt},
+    year = {2016},
+    title = {raspberry},
+    howpublished = "\url{https://www.element14.com/community/community/raspberry-pi}",
+    note = {Accessed on 08.04.2016}
+}
+
+@misc{PERT.CH3-singleboardpc-redbrick, 
+    author = {Unbekannt},
+    year = {2016},
+    title = {redbrick},
+    howpublished = "\url{https://www.tinkerforge.com/de/shop/bricks.html}",
+    note = {Accessed on 08.04.2016}
+}
