--- a/diplomarbeit/sections/ch3_implementierung/web-app/evaluierung.tex
+++ b/diplomarbeit/sections/ch3_implementierung/web-app/evaluierung.tex
@@ -83,6 +83,7 @@ Für die konkrete Umsetzung einer Web-Applikation wird in den meisten Fällen ei
 \textbf{Angular 2.0} ist ein Framework, welches dabei helfen soll, Client Applikationen in HTML und JavaScript zu entwickeln. Das Framework an sich besteht aus mehreren kooperierenden Libaries. Für die Erstellung einer Angular Applikation müssen so gennante HTML \textit{templates} im Angular-Stil erstellt werden, einige \textit{component} Klassen welche die templates managen dazu einbinden, und die Logik hinter der Applikation in so gennanten \textit{services}, beschreiben \cite{MELD.CH3-web-app.angular}. Für eine Beschreibung zur Architektur, siehe Abbildung \ref{fig:angulararch}.
 
 \clearpage
+\lfoot{Autor: Hüseyin Bozkurt}
 
 \begin{table}[!htb]
 \centering
@@ -121,6 +122,7 @@ Für die konkrete Umsetzung einer Web-Applikation wird in den meisten Fällen ei
 }
 \caption{React 1.0 \url{https://facebook.github.io/react/}}
 \end{table}
+\lfoot{Autor: Hüseyin Bozkurt}
 
 Das von Facebook entwickelte \textbf{React.js} ist ein eher spezielles Framework, oftmals wird gesagt, dass React.js das \textbf{V} im MVC-Konzept (Model-View-Control) da bietet. Aufgrund dessen ist die Filegröße des Frameworks um einiges kleiner als bei den anderen beiden, bietet aber dennoch viele der Basis Features an \cite{MELD.CH3-web-app.react}. Leider bietet React nicht alles an, was für unsere Applikation benötigt wird, daher ging es rasch aus der ängeren Auswahl raus.Für eine Graphik der React Architektur, siehe Abb. \ref{fig:reactarch}.
 
