--- a/diplomarbeit/sections/ch5_conclusio_outlook/conclusio.tex
+++ b/diplomarbeit/sections/ch5_conclusio_outlook/conclusio.tex
@@ -25,6 +25,8 @@ ein DS1621 Temperatursensor.
 	Raphael Simsek ist für die Berechnung und darstellung eines effizienten Schaltvorschlages zuständig.
 	Mit den von Daniel Melichar erstellten Methoden berechnet Raphael Simsek den effizientesten oder drehmomentintensivsten Gang mittels verschiedener Algorithmen. Diese Gang-Berechnung soll allerdings auf aktuelle Erkenntnisse aus dem Motormanagement eingehen, indem beispielsweise die Informationen des Gyroskops für die Erkenntnis ob der Nutzer sich auf einer steilen oder abfallenden Straße befindet um dadurch unnötige Falschangaben der App zu vermeiden. Die Erkennung ob ein Gang wirklich gewechselt wurde soll mittels der stark abfallenden Drehzahl oder der Fahrgeschwindigkeit passieren.
 	
+	\clearpage
+
 	\textbf{Hüseyin Bozkurt: Verbrauchsanalyse\newline}
 	 Hüseyin Bozkurt ist für die Verbrauchsdarstellung während der Fahrt und für retrospektive Ansichten nach der Fahrt zuständig.
 	 Diese wird hauptsächlich in Form von Liniendiagrammen geschehen, indem man den Schadstoffausstoß über eine bestimmte Zeit analysiert. In Verbindung mit der Webapplikation, werden diese Informationen mit OpenMap-Daten verbunden und zur schau gestellt.
