--- a/abnahmen/document.tex
+++ b/abnahmen/document.tex
@@ -84,6 +84,7 @@
 \mainmatter
 \include{chapters/ch1_sprint01}
 \include{chapters/ch2_sprint02}
+\include{chapters/ch3_sprint03}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Appendicies, references/bibliography, ...							%
